<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="offer"
            type="de.tudarmstadt.iptk.foxtrot.vivacoronia.trading.OfferViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/product_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={offer.productName}"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/category_input_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:prompt="@string/category"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@={offer.amount}"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:digits="0123456789,"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@={offer.rawPrice}"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EUR"
                android:textSize="24sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/details"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:padding="5dp"
                android:text="@={offer.details}"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>