<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.tudarmstadt.iptk.foxtrot.vivacoronia.quiz.QuizOverviewFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_round"
                    android:padding="8dp"
                    android:text="@string/quiz_welcome"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/start_new_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/start_new_game" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/border_top_bottom"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active_games"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/no_games_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/no_active_games"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/active_games_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/active_games"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/border_top_bottom"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/finished_games"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/no_games_finished"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/no_finished_games"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/finished_games_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/finished_games"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>